@@ -135,6 +135,7 @@ songs.heading=Songs
 tags.button=Manage tags...
 source.button=The Source
 easyslides.button=EasySlides
+freeworship.button=Freeworship
 easyworship.button=EasyWorship
 plainText.button=Plain text
 kingsway.button=Kingsway Online
@@ -182,6 +183,7 @@ type.lyrics.here.text=Type lyrics here
 rtf.files.description=RTF files
 sng.files.description=SNG (SongBeamer) files
 videopsalm.import.line1=This will import the VideoPsalm library from a JSON file.
+freeworship.import.line1=This will import FreeWorship songs from XML files.
 sof.import.line1=This will import the SoF library from an RTF file.
 plaintext.import.line1=This will import songs library from directory contains songs as plain text files.
 kingsway.import.line1=This will import the kingsway song library from online.
